--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,3 +1,6 @@
+
+            
+
 name: Link Jira Tickets
 
 on:
@@ -11,6 +14,9 @@ jobs:
     steps:
     - name: Checkout repository
       uses: actions/checkout@v2
+
+    - name: Setup Python
+      uses: actions/setup-python@v5.0.0
       
     - name: Install Python
       uses: actions/setup-python@v2
