--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -36,3 +36,10 @@ jobs:
         body: ${{ steps.link_tickets.outputs.jira_tickets }}
         token: ${{ secrets.GITHUB_TOKEN }}
         base: main
+    - name: Update PR description
+      run: |
+        curl -X PATCH \
+          -H "Authorization: token ${{ secrets.GITHUB_TOKEN }}" \
+          -H "Accept: application/vnd.github.v3+json" \
+          https://api.github.com/repos/${{ github.repository }}/pulls/${{ github.event.number }} \
+          -d '{"body": "${{ steps.link_tickets.outputs.jira_tickets }}" }'
